entity_macros/tests/ui/derive/ent/unexpected-ent-attr.stderr
error: Unknown field: `something`
  --> $DIR/unexpected-ent-attr.rs:17:11
   |
17 |     #[ent(something)]
   |           ^^^^^^^^^
